# auto-marketer-project

./: .env.example  .gitignore  README.md  SECURITY.md  docker-compose.yml  export_data.py  generate_emails.py  ingest.py  pyproject.toml  research_agent.py  test_security.py
.serena/: project.yml
app/: deps.py  main.py  schemas.py
app/routers/: campaigns.py  drafts.py
auto_marketer/: __init__.py  cli.py  db.py  email_generator.py  exporter.py  info_broker_client.py  sender.py
docs/: README.md  agents-and-prompts.md  architecture-and-agents.md  architecture.md  campaigns.md  data-model.md  getting-started.md  operations.md  sending.md  testing.md
tasks/: agent-collab.md  todo.md
tests/: test_api.py  test_db.py  test_email_generator.py  test_info_broker_client.py  test_sender.py
