[project]
name = "auto-marketer"
version = "0.4.0"
description = "Personalized cold email generation and bulk sending. Consumes profiles from info-broker."
requires-python = ">=3.10"

# Direct dependencies only. Transitive deps are pinned in `uv.lock`
# (preferred) or `requirements.lock` (fallback). Floors are set to the
# currently-vetted versions; bump with `uv lock --upgrade` and re-run
# `uv pip audit` before merging.
dependencies = [
    "fastapi>=0.115.0",
    "openai>=2.30.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.9.0",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "tenacity>=9.0.0",
    "uvicorn[standard]>=0.32.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27.0",
    "pip-audit>=2.7.3",
    "pytest>=8.4.2",
    "pytest-mock>=3.15.1",
    "ruff>=0.14.0",
]

[project.scripts]
auto-marketer = "auto_marketer.cli:main"

# --- uv configuration -----------------------------------------------------
[tool.uv]
package = false
index-strategy = "first-index"
compile-bytecode = true

# --- ruff configuration ---------------------------------------------------
[tool.ruff]
target-version = "py310"
extend-exclude = [".venv", "venv"]

[tool.ruff.lint]
select = [
    "S608",  # bandit: hardcoded-sql-expression (f-string / format / % SQL)
    "S602",  # subprocess shell=True
    "S605",  # start-process-with-a-shell
    "S301",  # pickle (deserialization)
    "S324",  # weak hash
    "S501",  # request-with-no-cert-validation
    "S113",  # request-without-timeout
]
# S608 is the load-bearing rule for SQL-injection prevention; never
# silence it without a security review.

[tool.pytest.ini_options]
testpaths = ["tests", "."]
addopts = "-q"
